--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.peoplemerge.nano</groupId>
+  <groupId>nano</groupId>
   <artifactId>nano</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -12,13 +12,13 @@
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
-		<version>3.8.1</version>
+		<version>4.1</version>
 		<scope>test</scope>
 	</dependency>
 	<dependency>
 		<groupId>org.antlr</groupId>
 		<artifactId>antlr</artifactId>
-		<version>3.1</version>
+		<version>3.1.3</version>
 		<scope>compile</scope>
 	</dependency>
 	<dependency>
@@ -29,7 +29,7 @@
 	</dependency>
 </dependencies>
 <build>
-	<plugins>
+<plugins>
 <plugin>
     <groupId>org.antlr</groupId>
     <artifactId>antlr3-maven-plugin</artifactId>
@@ -47,7 +47,16 @@
     </executions>
 
 </plugin>
-	</plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>2.0.2</version>
+      <configuration>
+        <source>1.6</source>
+        <target>1.6</target>
+      </configuration>
+    </plugin>
+</plugins>
 </build>
 <repositories>
 	<!--
